<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard.StudentDashboard"
    android:orientation="vertical"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hellostnd"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:fontFamily="@font/raleway"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:id="@+id/txt_loginfacultysignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Logout"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/raleway"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

            <TextView
                android:id="@+id/txt_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/Name"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:layout_marginTop="70dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="15dp"
                android:inputType="text"/>

            <TextView
                android:id="@+id/txt_Enroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/Enroll"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="15dp"
                android:inputType="number"/>

            <TextView
                android:id="@+id/txt_branch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/branch"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="15dp"
                android:inputType="text"/>

            <TextView
                android:id="@+id/txt_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/Category"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="15dp"
                android:inputType="text"/>

            <TextView
                android:id="@+id/txt_mobileno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/mobileno"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="15dp"
                android:inputType="number"/>

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/email"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="15dp"/>

            <TextView
                android:id="@+id/txt_acpcrank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/AcpcRank"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="15dp"
                android:inputType="number"/>

            <TextView
                android:id="@+id/txt_roomno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/roomno"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="15dp"/>

            <Button
                android:id="@+id/btn_updateprofile"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Updateprofile"
                android:layout_marginTop="30dp"
                android:textColor="#227E7C"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/buttonbackground"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>