<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity.SignUp"
    android:orientation="vertical"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/backarrowsignup"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@drawable/backarrow"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:fontFamily="@font/raleway"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:id="@+id/edttxt_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/Name"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:layout_marginTop="70dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="15dp"
                android:inputType="text"/>

            <EditText
                android:id="@+id/edttxt_Enroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/Enroll"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="15dp"
                android:inputType="number"/>

            <EditText
                android:id="@+id/edttxt_branch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/branch"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="15dp"
                android:inputType="text"/>

            <EditText
                android:id="@+id/edttxt_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/Category"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="15dp"
                android:inputType="text"/>

            <EditText
                android:id="@+id/edttxt_mobileno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/mobileno"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="15dp"
                android:inputType="number"/>

            <EditText
                android:id="@+id/edttxt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/email"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/edttxt_acpcrank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/AcpcRank"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="15dp"
                android:inputType="number"/>

            <Button
                android:id="@+id/btn_signupsubmit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/submit"
                android:layout_marginTop="30dp"
                android:textColor="#227E7C"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/buttonbackground"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="15dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/havemeetbefore"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:fontFamily="@font/raleway"
                    android:layout_marginRight="15dp" />

                <TextView
                    android:id="@+id/txt_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/raleway"
                    android:layout_marginRight="15dp"
                    android:layout_gravity="right" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/LoginasFaculty"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:fontFamily="@font/raleway"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_gravity="right" />

                <TextView
                    android:id="@+id/txt_loginfacultysignin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Clickhere"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/raleway"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_gravity="right" />

            </LinearLayout>



        </LinearLayout>
    </ScrollView>

</LinearLayout>