<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard.FacultyDashboardItem.SearchStudentField.SearchStudentItemClick"
    android:background="@drawable/background"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backarrowsearchStudent"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@drawable/backarrow"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hellofaculty"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:fontFamily="@font/raleway"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_alignParentLeft="true"/>


            </LinearLayout>
            <TextView
                    android:id="@+id/txt_logoutSearchStudentitemclick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Logout"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/raleway"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Name"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:textSize="50sp"
                android:fontFamily="@font/raleway"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:id="@+id/txt_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/roomno"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:layout_marginTop="60dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="15dp"
                android:inputType="text"/>

            <EditText
                android:id="@+id/txt_enroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/Enroll"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="15dp"
                android:inputType="text"/>

            <EditText
                android:id="@+id/txt_search_branch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/branch"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="15dp"
                android:inputType="text"/>

            <EditText
                android:id="@+id/txt_search_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/Category"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="15dp"
                android:inputType="text"/>

            <EditText
                android:id="@+id/txt_search_mobileno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/mobileno"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="15dp"
                android:inputType="text"/>

            <EditText
                android:id="@+id/txt_search_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/email"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="15dp"
                android:inputType="text"/>

            <TextView
                android:id="@+id/txt_search_acpcrank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/AcpcRank"
                android:textColor="@color/white"
                android:textColorHint="@color/teal_200"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="20dp"
                android:textSize="15dp"
                android:inputType="text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp"
                android:padding="10dp">

                <Button
                    android:id="@+id/update"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/buttonbackground"
                    android:text="@string/update"
                    android:textSize="12sp"
                    android:textColor="@color/btntxt"
                    android:layout_gravity="right"
                    android:layout_margin="20dp"/>

                <Button
                    android:id="@+id/remove"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/remove"
                    android:background="@drawable/buttonbackground"
                    android:textSize="12sp"
                    android:layout_margin="20dp"
                    android:layout_gravity="right"
                    android:textColor="@color/btntxt"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>